# forge

./: ANALYSIS.md  FORGE.md.example  FORGE.md.natural_example  README.md  UPGRADE.md  pyproject.toml  requirements.txt
.forge/: progress.json
.forge/traces/: 0f389a9a9908.jsonl
docs/: agent_beliefs.md  quality_grades.md
forge/: __init__.py  cli.py
forge/constraints/: __init__.py  compiler_integration.py  forge_md_compiler.py  import_checker.py  lint_runner.py  rules_parser.py  structural_tests.py
forge/context/: __init__.py  assembler.py  compaction.py  progress.py  session_memory.py
forge/core/: __init__.py  loop.py  permission.py  query.py  tool_dispatch.py
forge/evaluation/: __init__.py  criteria.py  diff_formatter.py  evaluator.py  feedback_loop.py
forge/harness/: __init__.py  entropy.py  handoff.py  hooks.py  initializer.py
forge/mcp/: __init__.py  client.py  registry.py
forge/observability/: __init__.py  analyzer.py  cli_patch.py  experience.py  instrumentation.py  tracer.py
forge/tools/: __init__.py  bash.py  edit.py  features_writer.py  git.py  glob.py  read.py  search.py
forge/util/: __init__.py  streaming.py  terminal_ui.py  token_counter.py
forge_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_compaction.py  test_constraints.py  test_dual_model.py  test_evaluator.py  test_experience.py  test_forge_md_compiler.py  test_integration.py  test_loop.py  test_observability.py  test_permission.py  test_tools.py
tests/fixtures/dual_project/: FORGE.md
(+19 files in other folders)
